Fix night light on mobile

--- a/core.css
+++ b/core.css
@@ -509,7 +509,8 @@ html[data-theme="dark"] #night-light + label.first_visit::after{
         animation-delay: none;
         z-index: 100;
         filter: invert(0.9);
-        transition: left 300ms ease, transform 300ms ease;
+        transform-origin: center center;
+        transition: left 300ms ease, transform 150ms ease;
     }
 
     html[data-theme="dark"] #night-light + label{
@@ -519,10 +520,14 @@ html[data-theme="dark"] #night-light + label.first_visit::after{
     #night-light + label.hamburger_pullout{
         left: var(--space-largest) !important;
     }
+
+    #night-light + label:hover{
+        top: unset !important;
+    }
     
     .pulldown{
         top: unset !important;
-        transform: scale(0.9) !important;
+        transform: scale(0.8) !important;
     }
 
     #night-light + label.first_visit::after{
